add responsive classes to components

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 body {
   min-height: 100dvh;
+  width: 100%;
   line-height: 1.6;
   font-family: "Roboto", sans-serif;
   background-color: #eae9e8;
@@ -13,10 +14,10 @@ body {
 
 @layer utilities {
   .section {
-    @apply max-w-4xl mx-auto mt-20 text-2xl scroll-mt-[300px];
+    @apply mx-auto mt-12 w-[90%] max-w-4xl scroll-mt-[300px] text-xl md:mt-20 md:w-[initial] md:text-2xl;
   }
 
   .sectionTitle {
-    @apply text-center text-3xl font-bold mb-5;
+    @apply mb-5 text-center text-2xl font-bold md:text-3xl;
   }
 }
